--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "homepage": "",
   "scripts": {
-    "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /parcel-project-template/"
+    "start": "parcel src/index.html",
+    "build": "parcel build src/index.html --public-url /parcel-project-template/"
   },
   "repository": {
     "type": "git",
