--- a/package.json
+++ b/package.json
@@ -7,17 +7,11 @@
     "start": "parcel src/index.html",
     "build": "parcel build src/index.html --public-url /goit-js-hw-09/"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": ""
-  },
   "dependencies": {
+    "flatpickr": "^4.6.13",
     "modern-normalize": "^1.1.0"
   },
   "devDependencies": {
