--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "goit-js-hw-09",
   "version": "1.0.0",
   "description": "",
-  "homepage": "",
+  "homepage": "https://alexfkr9.github.io/goit-js-hw-09/",
   "scripts": {
     "start": "parcel src/index.html",
     "build": "parcel build src/index.html --public-url /goit-js-hw-09/"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alexfkr9/goit-js-hw-08/ "
+  },
   "keywords": [],
-  "author": "",
+  "author": "Alex Fkr",
   "license": "ISC",
   "dependencies": {
     "flatpickr": "^4.6.13",
